clusters/workshop/cluster-config/namespace-provisioner/namespace-resources/jupyter-helm-release.yaml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jupyter
spec:
  virtualhost:
    fqdn: #@ "jupyterhub-" + data.values.name + ".mlops.tanzu.corby.page"
    tls:
      secretName: contour-tls/tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: proxy-public
          port: 80
    - conditions:
        - prefix: /user/jupyter/api
      enableWebsockets: true
      services:
        - name: proxy-api
          port: 8001
